Druppy (17/Feb/02)
-----------------
Changes:
	+ Added resizeable feature to chat group 
	  window and a PML(Probable Magic Loot)
	  and Chat Group Tab

Andon (16/Feb/02)
-----------------

Changes
 + Increased the version number to 1.1.0 !!

Druppy (16/Feb/02)
-----------------
Changes:
	+ Added a message view window

Andon (16/Feb/02)
-----------------

Changes:
 + Optimized exPacket slightly.. Nothing major, but this
   is the beginning of a long series of optimizations I
   am planning
 + Tweaked the stale timer a bit more.. Again, nothing
   really major, just some minor tweaks here and there.
 + Made some changes to the CHANGES file itself..  We
   still don't seem to have come to a single universal
   format <grins>


Druppy (14/Feb/02)
-----------------

Changes:
  + Made the mob filter a member of the connection class
    so each window can have different filters.

Changes (teerex):
  + Reduced vertex count on MOB / player objects.  Changed
    shading model to flat.
  + Range circles now use GLfloats.


Teerex (13/Feb/02)
-----------------

Additions:
 + Decreased vertex count on pyramid object.

Additions (Andon):
 + Optimized some of the code in exPacket.. Providing some
   preliminary support for non-32-bit platforms.

 Bug fixes:
 + Fixed a bug where range circles were missing their last
   segment, at least on my machine.
 + Fixed normals on pyramid object for better lighing.


Andon (12/Feb/02)
-----------------

Additions:
 + Added NEW objects for the object spawn type on the map..
   It's a Pyramid or square, depending on your map seetings.

Additions (teerex):
 + Added support for 0x05 TCP/UDP packet (self health update).

Bug Fixes:
 + Fixed a bug that was causing object spawns to be marked
   as "stale" due to the fact that no position updates were
   being received for them.
 + Fixed a Signal 11 (SIGSEGV - Segmentation Fault) caused
   by assuming ds was always initialized.. A recent patch